--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli-babel": "^6.7.2",
     "ember-cli-lodash-subset": "2.0.1",
     "ember-cli-version-checker": "^2.0.0",
-    "fastboot": "^1.1.0",
+    "fastboot": "tomwayson/fastboot#feat\/require-fn-name",
     "fastboot-express-middleware": "^1.1.0",
     "json-stable-stringify": "^1.0.1",
     "md5-hex": "^2.0.0",
